--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,14 @@ buildscript {
     ext {
         compose_version = '1.1.0-beta01'
     }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.2.2' apply false
     id 'com.android.library' version '7.2.2' apply false
